# gaia

./: .gitignore  Cargo.toml  README.md
gaia-core/: Cargo.toml
gaia-core/src/: error.rs  executor.rs  lib.rs  macros.rs  monitoring.rs  pipeline.rs  runner.rs  state.rs  task.rs
gaia-core/tests/: integration_tests.rs
gaia-example/: Cargo.toml  README.md
gaia-example/src/: lib.rs
gaia-ui/: .gitignore  Cargo.toml  README.md  dioxus.toml  package.json
gaia-ui/src/: globals.css  main.rs  server_functions.rs
gaia-ui/src/assets/: styles.css
gaia-ui/src/components/: metrics_visualization.rs  mod.rs  navigation.rs  pipeline_graph.rs
