[workspace]
members = [
    "gaia-core",
    "gaia-example",
    "gaia-ui",
    # "gaia-monitor",
    # "gaia-web",
]

resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["elcharitas"]
description = "A software for managing and monitoring complex pipelines with precision"
license = "MIT"
repository = "https://github.com/elcharitas/gaia"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0"
clap = { version = "4.3", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
