[package]
name = "gaia-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core library for Gaia pipeline management and execution"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, optional = true }

[features]
default = ["tokio"]
tokio = ["tokio/full"]
wasm = []
