[package]
name = "gaia-example"
version = "0.1.0"
edition = "2024"
authors = ["elcharitas"]
description = "Example crate demonstrating Gaia pipeline management capabilities"
license = "MIT"

[dependencies]
gaia-core = { path = "../gaia-core" }
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0"
rand = "0.8"

[[bin]]
name = "data-processing"
path = "src/bin/data_processing.rs"

[[bin]]
name = "web-crawler"
path = "src/bin/web_crawler.rs"
