[package]
name = "gaia-ui"
version = "0.1.0"
edition = "2024"
authors = ["elcharitas"]
description = "Dioxus frontend for Gaia pipeline management and monitoring"
license = "MIT"
repository = "https://github.com/elcharitas/gaia"

[dependencies]
# gaia-core = { path = "../gaia-core" }
dioxus = { version = "0.6", features = ["fullstack"] }
dioxus-router = "0.6"
dioxus-free-icons = { version = "0.9", features = ["bootstrap"] }
dioxus-charts = "0.3.1"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["web"]
web = []

[[bin]]
name = "gaia-ui"
path = "src/main.rs"
